--- a/FAQ.html
+++ b/FAQ.html
@@ -104,7 +104,7 @@
         </div>
         <div class="faq-item">
             <div class="question">
-                <span>How can I contact a tutor if I have questions or need assistance?</span>
+                <span>Are there limits or schedule for accessing lesson</span>
                 <span class="toggle">+</span>
             </div>
             <div class="answer">
