--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,9 @@
     <div class="judul">
         <h1>Blog</h1>
         <h2>Improve your skill by Reading</h2>
-        <h3>TRENDING</h3>
+        <h3 id="gantitext">TRENDING</h3>
     </div>
+    <script src="js/script.blog.js" type="text/javascript"></script>
     <div class="top-section">
         <div class="left-section">
             <div class="caption">From The Starry Night to a wheatfield: Van Gogh's darkest symbol</div>
