--- a/tips&trick.html
+++ b/tips&trick.html
@@ -46,7 +46,7 @@
     <div class="judul">
         <h1>Tips & Tricks</h1>
     </div>
-    <div class="text"><p>Don't worry if you can't speak English yet. 
+    <div class="text"><p id="gantiwarna">Don't worry if you can't speak English yet. 
         There are many easy ways to learn English that you can try. After all, to become proficient in a field, we must first learn diligently, right? 
         Here are 5 ways to learn English for beginners that you can apply.</p></div>
     <div class="left_content">
@@ -55,9 +55,10 @@
         <img src="img/konsisten.jpeg">
         <div class="keterangan">
                 <h3>Consistent Practice</h3>
-                <p>Dedicate daily time to practice English. Give yourself challenges in English. Try to write a short essay or a speech on a topic you are interested in. This will help you improve your writing and speaking skills. In addition to speaking with people in real life, you can also participate in online discussions in English. This can help you practice your writing and speaking skills without having to meet in person.</p>
+                <p id="maintips&trick">Dedicate daily time to practice English. Give yourself challenges in English. Try to write a short essay or a speech on a topic you are interested in. This will help you improve your writing and speaking skills. In addition to speaking with people in real life, you can also participate in online discussions in English. This can help you practice your writing and speaking skills without having to meet in person.</p>
         </div>
         </div>
+        <script src="js/script.tips&trick.js" type="text/javascript"></script>
         </a>
 
         <a href="tips&trick2.html">
