--- a/tips&trick1.html
+++ b/tips&trick1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="galaxy-header">
@@ -44,8 +45,9 @@
     <div class="main-tips">
     <div class="judul">
         <h1>Tips & TrickS</h1>
-        <h2>Consistent Practice : Dedicate Daily Time to Practice English</h2>
+        <h2 id="tips">Consistent Practice : Dedicate Daily Time to Practice English</h2>
     </div>
+    <script src="js/script.tips&trick.js" type="text/javascript"></script>
     <div class="banner_container">
         <img src="img/konsisten.jpeg">
         <p class="banner-caption">In the globalized world we live in today, proficiency in the English language has become an invaluable skill. Whether you're a student looking to excel in academics, a professional seeking career growth, or a traveler wanting to explore new horizons, English proficiency opens doors to numerous opportunities. One of the most effective ways to master any skill, including English, is through consistent practice.</p>
