--- a/career.html
+++ b/career.html
@@ -45,11 +45,12 @@
       <div class="col-12">
         <div class="titleContent">
           <h2>
-            Why <span>English language </span>skills <br />
+            Why <span id="textbersinar">English language </span>skills <br />
             important for your future?
           </h2>
         </div>
       </div>
+      <script src="js/script.carier.js" type="text/javascript"></script>
       <div class="col-6 right">
         <div class="card">
           <div class="imgWrap"><img src="img/fotocard1.svg" id="foto1"></div>
