--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="home">
         <div class="content">
             <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
-            <p class="par">At English Galaxy, we believe that learning is a journey filled with endless opportunities. Just like the vast cosmos, knowledge knows no bounds. 
+            <p class="par">At English Galaxy, we believe that learning is a journey filled with endless opportunities. Just like the vast 		cosmos, knowledge knows no bounds. 
                 <br> Join us on this voyage of discovery, where every lesson is a star in the galaxy of your learning experience. 
                 <br> Explore, learn, and illuminate your path to success with us.
             </p>
@@ -63,12 +63,11 @@
                             <th>Materi SD</th>
                         </tr>
                         <tr>
-                            <td><a href="category_sd1.html">Introduction Basic English Vocabullary</a></td>
+                            <td><a href="category_sd1.html">Introduction Basic English Vocabulary</a></td>
                         </tr>
                         <tr>
                             <td><a href="category_sd2.html">Basic English Concepts</a></td>
                         </tr>
-                       
                     </table>
                 </div>
             </div>
@@ -83,7 +82,7 @@
                             <td><a href="category_smp1.html">Present, Past, and Future Continuous Tenses</a></td>
                         </tr>
                         <tr>
-                            <td><a href="category_smp2.html">Asking and Giving Atention</a> </td>
+                            <td><a href="category_smp2.html">Asking and Giving Attention</a></td>
                         </tr>
                     </table>
                 </div>
@@ -104,44 +103,9 @@
                     </table>
                 </div>
             </div>
-            <div class="item">
-                <img src="img/ellipse1.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <th>Testimoni</th>
-                        </tr>
-                        <tr>
-                            <td>Nama</td>
-                        </tr>
-                        <tr>
-                            <td>Kelas</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="img/ellipse2.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <th>Testimoni</th   >
-                        </tr>
-                        <tr>
-                            <td>Nama</td>
-                        </tr>
-                        <tr>
-                            <td>Kelas</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
         </div>
     </div>
-
-
-</div>
-
+<script src="js/script.card.js" type="text/javascript"></script>
 <footer class="galaxy-footer">
     <div class="footer-first">
        <div class="left-column">
@@ -172,7 +136,6 @@
        </div>
     </div>
     </div>
-
     <div class="footer-second">
         <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
     </div>
