--- a/tips&trick2.html
+++ b/tips&trick2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="galaxy-header">
@@ -44,8 +45,9 @@
     <div class="main-tips">
 <div class="judul">
     <h1>Tips & Trick</h1>
-    <h2>Immerse Yourself: Surround Yourself with English Media - Movies, Music, Books.</h2>
+    <h2 id="tips">Immerse Yourself: Surround Yourself with English Media - Movies, Music, Books.</h2>
 </div>
+<script src="js/script.tips&trick.js" type="text/javascript"></script> 
     <div class="content">
     <div class="movie_content">
         <img src="img/g3.jpeg" style="float:left;">
