--- a/tips&trick3.html
+++ b/tips&trick3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="galaxy-header">
@@ -44,15 +45,18 @@
         <div class="main-tips">
         <div class="judul">
             <h1>Tips & Tricks</h1>
-            <h2>Interactive Learning: Engage in Conversations with Native Speakers or Language Partners</h2>
+            <h2 id="tips">Interactive Learning: Engage in Conversations with Native Speakers or Language Partners</h2>
         </div>
-        <p>Engaging in conversations with native speakers or language partners is a highly effective way to improve your language skills. Here are some tips and tricks for interactive learning:</p>
+       
+        <p id="tips1">Engaging in conversations with native speakers or language partners is a highly effective way to improve your language skills. Here are some tips and tricks for interactive learning:</p>
         <div class="row">
             <div class="column">
                 <img src="img/g4.png">
                 <img src="img/g41.jpeg">
             </div>  
         </div>
+        <script src="js/script.tips&trick.js" type="text/javascript"></script>
+        <script src="js/script.jilid2.js" type="text/javascript"></script>
         <div class="content"><p>Look for language exchange partners online or in your local community who are fluent in English and are interested in learning your native language. Language exchange websites and apps can be very helpful for this purpose.</p>
             <p>Some communities have conversation clubs or language exchange meetups where people gather to practice speaking different languages. Attend these events to practice English in a social setting.</p>
             <p>Additionally, some regions host conversation clubs or language exchange meetups, providing an enjoyable and sociable environment for practicing English. Participating in these gatherings can boost your conversational skills and foster cultural exchanges, enriching your language learning journey. So, don't hesitate to seek out these opportunities and embrace the chance to improve your English proficiency while helping others with your native language.</p>
@@ -96,6 +100,7 @@
             <div class="footer-second">
                 <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
             </div>
+            
         </footer>
     </body>
     </html>
