--- a/tips&trick4.html
+++ b/tips&trick4.html
@@ -6,7 +6,9 @@
     <title>Tips&Trick</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <header class="galaxy-header">
@@ -44,9 +46,9 @@
     <div class="main-tips">
 <div class="judul">
     <h1>Tips & Tricks</h1>
-    <h2>Vocabulary Building: Learn New Words Every Day and Use Them in Sentences</h2>
+    <h2 id="tips">Vocabulary Building: Learn New Words Every Day and Use Them in Sentences</h2>
 </div>
-
+<script src="js/script.tips&trick.js" type="text/javascript"></script>  
 <div class="row">
     <div class="column">
         <img src="img/g5.jpeg">
