--- a/tips&trick5.html
+++ b/tips&trick5.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="galaxy-header">
@@ -45,8 +46,9 @@
 <div class="main-tips">
 <div class="judul">
     <h1>Tips & Tricks</h1>
-    <h2>Language Apps: Utilize language learning apps for interactive lessons.</h2>
+    <h2 id="tips">Language Apps: Utilize language learning apps for interactive lessons.</h2>
 </div>
+<script src="js/script.tips&trick.js" type="text/javascript"></script>  
 <div class="banner_container">
     <img src="img/g6.png">
 </div>
